--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Habernet/WordGuess-CLI/issues"
   },
-  "homepage": "https://github.com/Habernet/WordGuess-CLI#readme"
+  "homepage": "https://github.com/Habernet/WordGuess-CLI#readme",
+  "dependencies": {
+    "inquirer": "^6.3.1"
+  }
 }
